Changed name in title tag

--- a/ui.html
+++ b/ui.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=300, initial-scale=1">
-		<title>Phone Controller</title>
+		<title>Mobile I/O</title>
 		<style type="text/css">
 			*{
 				margin: 0px;
