--- a/ui.html
+++ b/ui.html
@@ -12,8 +12,9 @@
 				width: 10px;
 				height: 10px;
 				background: rgba(0,0,0,.5);
-				outline: 10px blue solid;
+				outline: 10px #6E6E6E solid;
 				color: #FFF;
+				text-align: center;
 			}
 		</style>
 	</head>
